# agno

./: .env.example  README.md  demo.py  demo_output_20250820_164740.json  demo_output_20250820_165020.json  demo_output_20250821_101409.json  interactive_demo_20250815_154807.json  interactive_demo_20250820_162424.json  interactive_demo_20250820_163553.json  pyproject.toml  requirements.txt  test_imports.py  validate_tools.py
demo/: README.md  scenario.md
demo/agents/: editor_agent.py  project_manager_agent.py  research_agent.py  strategist_agent.py  writer_agent.py
demo/bank_statement_processing/: README.md  bank_statement_demo.py  bank_statement_orchestrator.py
demo/bank_statement_processing/agents/: extraction_agent.py  validation_agent.py
demo/bank_statement_processing/tools/: pdf_tools.py
demo/content_creation/: README.md  content_creation_demo.py
demo/content_creation/agents/: editor_agent.py  project_manager_agent.py  research_agent.py  strategist_agent.py  writer_agent.py
demo/content_creation/models/: ai_model.py
demo/models/: ai_model.py
demo/structured_output/: __init__.py  simple_demo.py  text_analyzer.py
demo/team_api_demo/: README.md  interactive_demo_20250820_125744.json  simple_team_demo.py  validate_setup.py
demo/text_analyzer/: agent.py  hello_world.py  reviews.py  simple_demo.py  text_analyzer.py  text_analyzer_structured.py  text_analyzer_team.py  text_analyzer_tool.py  text_analyzer_workflow.py  tools.py
demo/tools/: content_tools.py  research_tools.py
demo/workflows/: content_creation_workflow.py
examples/: basic_usage.py
(+3 files in other folders)
